# sepfir_onset_detection

./: LICENSE  README.md  Untitled.ipynb  Untitled2.ipynb  evaluation.ipynb  filter.ipynb  filter_processor.ipynb  main.py  onset_filter_pso.py  pso_with_folds.py  pso_with_folds_local.py  pyproject.toml  sep_filter_all.py  sep_filter_single.py  superflux.ipynb  superflux_sepfir.py
scripts/: create_venv.ps1  run.sh  run_jupyter.ps1  run_rupyter.sh
src/sepfir_onset_detection/sep_fir_processor/: __init__.py  _sep_fir_processor.py
