[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sepfir_onset_detection"
version = "0.0.1"
authors = [
    { name="Peter Steiner", email="peter.steiner@tu-dresden.de" },
    { name="Kilian Göller", email="kilian.goeller@tu-dresden.de" },
    { name="Peter Birkholz", email="peter.birkholz@tu-dresden.de" },
]
description = "Non-Standard Echo State Networks for Video Door State Monitoring"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "madmom",
    "librosa",
    "pyswarms",
    "tqdm"
]

[project.optional-dependencies]
notebook = [
    "jupyter",
    "seaborn"
]

[project.urls]
"Homepage" = "https://github.com/TUD-STKS/sepfir_onset_detection"
"Bug Tracker" = "https://github.com/TUD-STKS/sepfir_onset_detection/issues"
